--- a/Component/Drop Down/Drop Down Group/v05/dropDownTransformV05.html
+++ b/Component/Drop Down/Drop Down Group/v05/dropDownTransformV05.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width,initial-scale=1">
+
+<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
 <meta charset="utf-8">
 	<title>Drop Down transform V05</title>
     <link rel="stylesheet" type="text/css" href="dropDownTransformV05.css">
