--- a/Tools/Typora/light-github.css
+++ b/Tools/Typora/light-github.css
@@ -41,7 +41,7 @@ html {
 }
 
 body {
-    font-family: "Open Sans","Clear Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: "Open Sans","Clear Sans",Inconsolata,sans-serif;
     color: #4A4A4A;
     line-height: 1.6;
 }
@@ -117,13 +117,13 @@ h1 {
     padding-bottom: .3em;
     font-size: 2.25em;
     line-height: 1.2;
-    border-bottom: 4px solid #DAD9D4;
+    border-bottom: 4px solid #CCCCCC;
 }
 h2 {
    padding-bottom: .3em;
     font-size: 1.75em;
     line-height: 1.225;
-    border-bottom: 2px solid #DAD9D4;
+    border-bottom: 2px solid #CCCCCC;
 }
 h3 {
     font-size: 1.5em;
@@ -261,16 +261,31 @@ table tr td:last-child {
 }
 
 .md-fences,
-code,
 tt {
     border: 1px solid #ddd;
-    background-color: #f8f8f8;
+/*     border: 1px solid #ddd; */
+    background-color: #E0DEDA;
+/*     background-color: #f8f8f8; */
     border-radius: 3px;
     padding: 0;
-    font-family: "Liberation Mono", Inconsolata, Consolas, Courier;
+    font-family: "Liberation Mono", Inconsolata, monospace;
     padding: 2px 4px 0px 4px;
-    font-size: 1em;
+    font-size:0.9em;
 }
+
+/* Code */
+code {
+    border: 1px solid #CCCCCC;
+/*     border: 1px solid #ddd; */
+    background-color: #E6E5E2;
+/*     background-color: #f8f8f8; */
+    border-radius: 3px;
+    padding: 0;
+    font-family: "Liberation Mono", Inconsolata, monospace;
+    padding: 2px 4px 0px 4px;
+    font-size:0.9em;
+}
+
 
 .md-fences {
     margin-bottom: 15px;
@@ -348,7 +363,7 @@ tt {
 .md-image>.md-meta {
     border: 1px solid #ddd;
     border-radius: 3px;
-    font-family: Consolas, "Liberation Mono", Courier, monospace;
+    font-family: Inconsolata, "Liberation Mono", Courier, monospace;
     padding: 2px 4px 0px 4px;
     font-size: 0.9em;
     color: inherit;
