--- a/Basic/Typography/Typography.css
+++ b/Basic/Typography/Typography.css
@@ -4,6 +4,12 @@ body {
     font-family:"Helvetica","Arial",sans-serif;
     font-size: 14px;
 }
+
+/*Font Stack Test */
+p#fontstacktest{
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Helvetica,"PingFang SC","Hiragino Sans GB","Microsoft YaHei",SimSun,sans-serif;
+}
+
 p#five {
     font-size:1em;
 }
