--- a/Basic/Typography/Typography.css
+++ b/Basic/Typography/Typography.css
@@ -1,47 +1,59 @@
 body {
     color: #414141;
     background-color: #EEEEEE;
-    font-family:"Helvetica","Arial",sans-serif;
+    font-family: "Helvetica", "Arial", sans-serif;
     font-size: 14px;
 }
 
 /*Font Stack Test */
-p#fontstacktest{
-    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Helvetica,"PingFang SC","Hiragino Sans GB","Microsoft YaHei",SimSun,sans-serif;
+
+p#fontstacktest {
+    /*    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Helvetica,"PingFang SC","Hiragino Sans GB","Microsoft YaHei",SimSun,sans-serif;*/
+    font-family:  -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", sans-serif;
 }
 
 p#five {
-    font-size:1em;
+    font-size: 1em;
 }
+
 p#six {
     font-size: 2em;
 }
 
 /*selecting multiple elements*/
-h1,h2,h3,h4,h5,h6{
-    font-family:"BlackJack","Arial",sans-serif;
-    font-weight: normal;  
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: "BlackJack", "Arial", sans-serif;
+    font-weight: normal;
 }
 
 
 /*Using web font as local*/
+
 @font-face {
-  font-family: 'BlackJack';
-    
-  src: url('fonts/blackjack-webfont.eot'); /* For IE6-8 */
-  src: url('fonts/blackjack-webfont.eot?#iefix') format('eot'),
-       url('fonts/blackjack-webfont.woff') format('woff'),
-       url('fonts/blackjack-webfont.ttf') format('truetype'),
-       url('fonts/blackjack-webfont.svg#BlackJack') format('svg');
-    
-  font-style: normal;
-  font-weight: 400;
+    font-family: 'BlackJack';
+
+    src: url('fonts/blackjack-webfont.eot');
+    /* For IE6-8 */
+    src: url('fonts/blackjack-webfont.eot?#iefix') format('eot'),
+    url('fonts/blackjack-webfont.woff') format('woff'),
+    url('fonts/blackjack-webfont.ttf') format('truetype'),
+    url('fonts/blackjack-webfont.svg#BlackJack') format('svg');
+
+    font-style: normal;
+    font-weight: 400;
 }
 
 
 /*set Helvetica font class*/
-.Hel{
-    font-family:"Georgia",sans-serif;
+
+.Hel {
+    font-family: "Georgia", sans-serif;
     font-size: 18px;
     text-transform: uppercase;
     font-weight: bold;
